--- a/Express.js/package.json
+++ b/Express.js/package.json
@@ -4,12 +4,14 @@
   "description": "Express.js\r 1.Cách khởi tạo dự án Express.js\r 2.Triển khai Webservice bằng Express.js",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.4.2"
